tests/samples/invalid/conditional_declaration.pn
fn main() -> i32
{
	var result = foo(404);
	return: result
}

fn foo(x: i32) -> i32
{
	if x == 400
		goto return;
	if x == 404
		goto return;
	if x == 421
		goto return;
	var result = 500i32;
	return: result
}

fn overlapping(input: i32) -> i32
{
	var result = 200;
	if input == 0
		goto return;
	if input == 1
		goto next;
	var a = 20;
	result = result + a;
	if input == 2
		goto return;
	next:
	var b = 10;
	result = result + a + b;
	return: result
}

fn bar(x: i32) -> i32
{
	var result = 300;
	if x == 400
		goto calculations;
	var a: i32 = 5;
	calculations:
	a = 2 * a;
	a = a * a + 2 * a + 5;
	result = result + a;
	return: result
}
